# therealbugtracker

./: .gitignore  pyproject.toml
bugtracker/: settings.py  urls.py
bugtracker/template/: base.html  createTicket.html  detail.html  editTicket.html  index.html  login.html  style.css  user_detail.html
custom_user/: admin.py  forms.py
custom_user/migrations/: 0001_initial.py
wabbit/: admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  views.py
wabbit/migrations/: 0001_initial.py
