[tool.poetry]
name = "Bugs"
version = "0.1.0"
description = ""
authors = ["Imraj423 <dahqniss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
django-crispy-forms = "^1.8.1"
django-material = "^1.6.0"
webstack_django_sorting = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
